--- a/index.html
+++ b/index.html
@@ -1,24 +1,197 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Required meta tags-->
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta name="description" content="Who want's to be Millionaire game">
+	<meta name="keywords" content="money, quiz, play, entertainment, trivia">
+	<meta name="author" content="Tomas_K_5P">
+    <!-- Bootstrap stylesheet -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- Local stylesheet -->
+    <link rel="stylesheet" href="assets/css/styles.css"> 
+    <!-- FavIcon-->
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
+    <!-- Title -->
+    <title>Millionaire | Play !</title>
 </head>
 <body>
-    <div class="login-container">
-        <form id="loginForm">
-            <h2>Login</h2>
-            <input type="text" id="username" placeholder="Username" required>
-            <input type="password" id="password" placeholder="Password" required>
-            <select id="role">
-                <option value="admin">Admin</option>
-                <option value="user">User</option>
-            </select>
-            <button type="submit">Login</button>
-        </form>
+    <!-- Header -->
+    <header>
+     <!-- Header outer container -->
+    <div class="header-footer">
+        <!-- Logo -->
+        <a href="https://tomik-z-cech.github.io/PP2-Millionaire/">
+            <h1 id="logo-header">
+                <i class="fa-solid fa-money-bill-wave"></i>
+                MILLIONAIRE
+            </h1>
+        </a>
+        <!-- Hamburger menu - only relevant at width less 1140px -->
+        <nav id="hamburger-menu">
+            <label for="hamburger">&#9776;</label>	
+            <input type="checkbox" id="hamburger">	
+            <!-- Menu -->
+            <div id="menu">
+                <a href="index.html" class="active-page">Play !</a>	
+                <a href="leaderboard.html">Leader Board</a>	
+            </div>
+        </nav>	
     </div>
-    <script src="script.js"></script>
+    </header>
+   <!-- Main display container -->
+    <main id="display-container" class="hide-vertical">
+        <!-- Rules -->
+        <div id="rules-inner-container" class="blue-border grey-background">
+            <img src="assets/images/logo.png" alt="Logo of Millionaire's game" id="logo">
+            <h1>How to play ?</h1>
+            <div>
+              <ul>
+                <li class="rules-item">
+                    Toggle the switches for background music and sound effects for the best game experience (Only available on PC).<br>
+                    <img src="assets/images/rules-images/settings.png" alt="Sound settings toggles" class="rules-image">
+                </li>
+                <li class="rules-item">
+                    To start the game fill your name in the text field below, your name cannot contain any spaces.<br>
+                    <img src="assets/images/rules-images/name.png" alt="Name input field" class="rules-image">
+                </li>
+                <li class="rules-item">
+                    Remember, you have got only 30 seconds per question, your time will start right away as you are in the hot seat and timer is displayed in 
+                    top right corner.<br>
+                    <img src="assets/images/rules-images/timer.png" alt="Timer field in game" class="rules-image">
+                </li>
+                <li class="rules-item">
+                    Your progress is indicated in the progress bar on the left.<br>
+                    <img src="assets/images/rules-images/moneybar.png" alt="Money bar field in game" class="rules-image">
+                </li>
+                <li class="rules-item">
+                    You can avail of three lifelines :
+                    <ul>
+                        <li>
+                            Extra time (You will get 30 extra seconds)<br>
+                            <img src="assets/images/rules-images/time-lifeline.png" alt="Extra time lifeline in game" class="rules-image">
+                        </li>
+                        <li>
+                            Change the question (Different question will be displayed)<br>
+                            <img src="assets/images/rules-images/question-lifeline.png" alt="Change question lifeline in game" class="rules-image">
+                        </li>
+                        <li>
+                            50:50 (Two incorrect answers will be removed)<br>
+                            <img src="assets/images/rules-images/fifthy-lifeline.png" alt="Fifthy - Fifthy lifeline in game" class="rules-image">
+                        </li>
+                    </ul>
+                </li>
+                <li class="rules-item">
+                    The score is counted the following way :
+                    <ul>
+                        <li>
+                            Each question has a weight between € 5 and € 20.000
+                        </li>
+                        <li>
+                            After answering the question correctly, the weight is multiplied by the time left.
+                        </li>
+                        <li>
+                            Score for each question is added to the final score figure.
+                        </li>
+                        <li>
+                            Current score is displayed in top left corner.<br>
+                            <img src="assets/images/rules-images/score.png" alt="Score field in game" class="rules-image">
+                        </li>
+                    </ul>
+                </li>
+                <li class="rules-item">
+                    There're 10 questions in total, with 3 different levels of difficulty
+                    <ul>
+                        <li>Questions 1-3 : Easy</li>
+                        <li>Questions 4-6 : Medium</li>
+                        <li>Questions 4-6 : Hard</li>
+                        <li>Final Question 10 : Super Hard</li>
+                    </ul>
+                </li>
+                <li class="rules-item">
+                    The game is over when :
+                    <ul>
+                        <li>You run out of time on any question - no win.</li>
+                        <li>You answer wrong any of the questions - no win.</li>
+                        <li>You answer all questions correctly - you will be winner.</li>
+                    </ul>
+                </li>
+                <li class="rules-item">
+                    If you win the game, your score will be recorded in the leader board in your local browser.
+                </li>
+                <li class="rules-item">
+                    Enjoy the game ;)
+                </li>
+              </ul>  
+            </div>
+        </div>
+        <!-- Settings container-->
+        <div id="settings" class="blue-border grey-background">
+            <span id="settings-label">Settings :</span>
+            <div class="align-center-center">
+                <label for="music-switch">Music</label>
+            </div>
+            <div class="form-check form-switch align-center-center">
+                <input class="form-check-input" type="checkbox" id="music-switch">
+            </div>
+            <div class="align-center-center">
+                <label for="sfx-switch">SFX</label>
+            </div>
+            <div class="form-check form-switch align-center-center">
+                <input class="form-check-input" type="checkbox" id="sfx-switch">
+            </div>
+        </div>
+        <!-- Player details container -->
+        <div id="rules-user-details" class="align-center-center blue-border grey-background">
+            <div>
+                <label for="player-name-input" id="player-name-label">Enter your name : </label>
+                <input type="text" id="player-name-input" placeholder="Your name" required>
+            </div>
+            <div>
+                <button class="button grey-background" id="play-button">Let's play !</button>
+            </div>
+        </div>
+    </main>
+    <aside>
+        <!-- Empty div acting as a mask -->
+        <div id="mask"></div>
+        <!-- Alert window -->
+        <div id="alert-window" class="blue-border">
+            <div class="align-center-center">
+                <img src="assets/images/info-icon.png" alt="Info icon" id="info-icon">
+                <h2>Information ...</h2>
+            </div>
+            <div class="align-center-center">
+                <h3 id="alert-message">No message</h3>
+            </div>
+            <div class="align-center-center">
+                <button class="button grey-background" id="ok-button" aria-hidden="true">OK</button>
+            </div>
+        </div>
+        <!-- Vertical mask -->
+        <div id="unhide-vertical" class="align-center-center">
+            <img src="assets/images/tilt.jpg" alt="Tilt your phone icon" id="info-icon-mask">
+            <p>To play this game,</p>
+            <p>please</p>
+            <p>tilt your device to landscape orientation.</p>
+        </div>
+    </aside>
+    <!-- Footer -->
+    <footer class="header-footer">
+        <!-- Social icons list -->
+        <ul id="socials">
+            <li><a href="https://www.facebook.com/Millionaire" aria-label="Visit the real game Facebook page (Opens in new tab)" target="_blank" rel="noopener" title="Check the real Millionare Facebook page !"><i class="fa-brands fa-square-facebook"></i></a></li>
+            <li><a href="https://twitter.com/MillionaireUK" aria-label="Visit real Millionare Twitter page (Opens in new tab)" target="_blank" rel="noopener" title="Check the real Millionaire Twitter page !"><i class="fa-brands fa-square-twitter"></i></a></li>
+            <li><a href="https://www.instagram.com/p/CfDu_yTlH4X/" aria-label="Visit the Millionaire Instagram page (Opens in new tab)" target="_blank" rel="noopener" title="Check the real game Instagram page !"><i class="fa-brands fa-square-instagram"></i></a></li>
+        </ul>
+    </footer>
+    <!-- FontAwesome script -->
+    <script src="https://kit.fontawesome.com/5c3b7bf139.js" crossorigin="anonymous"></script>
+    <!-- Local JS script -->
+    <script src="assets/js/script.js"></script>
+    <!-- Bootstrap JS script -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
